# debian-vagrant-images

./: Makefile
.github/workflows/: parallels.yml
utils/vagrant/parallels/: README.md  import2prl  pyproject.toml
