[tool.poetry]
name = "import2prl"
version = "0.1.0"
description = ""
authors = ["Nick Anderegg <nick@anderegg.io>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
